AX: The isolated tree doesn't update in response to HTMLOptionElement::setSelectedState changes https://bugs.webkit.org/show_bug.cgi?id=246135 rdar://problem/100839849

Reviewed by Andres Gonzalez.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
Mark accessibility/select-element-at-index.html as fixed.
* LayoutTests/accessibility/select-element-at-index-expected.txt:
* LayoutTests/accessibility/select-element-at-index.html:
Make test async so it can pass in ITM.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::selectedStateChanged):
Also post AXSelectedStateChanged for option elements.
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/ios/AXObjectCacheIOS.mm:
(WebCore::AXObjectCache::notificationPlatformName):
(WebCore::AXObjectCache::postPlatformNotification):
* Source/WebCore/accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):
* Source/WebCore/html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::setSelectedState):
Remove #if PLATFORM(ATSPI) guarding the cache update.

Canonical link: https://commits.webkit.org/255279@main